# owl-cpu

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  HACKING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
include/owl-cpu/: owl-cpu.hpp
source/: assembler.h  basic.ld  cpu.h  crt0.s  disassembler.h  dispatch_owl.h  dispatch_rv32i.h  dispatcher.cpp  endian.h  fib.asm  fib.c  fib_00.c  fib_01.c  fib_with_print_fib_00.c  fib_with_print_fib_01.c  fortune-owl.c  fortune.c  instruction_handler.h  lbavm-002.cpp  lbavm-003.cpp  lbavm-004.cpp  lbavm-005.cpp  lbavm-011-benchmark.cpp  lbavm-011.cpp  lbavm-012.cpp  make_dispatcher.py  memory.h  opcodes.h  owl-cpu-v10-001.cpp  owl-cpu-v10-002.cpp  owl-cpu-v10-002perf.cpp  owl-cpu-v10-002perfv.cpp  owl-cpu-v10-003.cpp  owl-cpu-v10-004.cpp  owl-cpu-v11-001.cpp  owl-cpu-v11-002.cpp  owl-cpu-v2.cpp  owl-cpu-v3.cpp  owl-cpu-v4-full-fat.cpp  owl-cpu-v4-harcoded-ecall.cpp  (+14 more)
test/: CMakeLists.txt
test/source/: owl-cpu_test.cpp
